Добавлены цвета и товары, так же некоторые правки
